fix: remove cutoff in last line of paragraphs

--- a/packages/xm_dkfz_net_prototype/source/_patterns/components/content-wrapper/content-wrapper.scss
+++ b/packages/xm_dkfz_net_prototype/source/_patterns/components/content-wrapper/content-wrapper.scss
@@ -221,6 +221,8 @@
 
     &__content-text {
         p  {
+            padding-bottom: .5rem;
+
             > a {
                 text-decoration: underline;
 
